syntax = "proto3";

package logger;

option go_package = "/pb";

service LoggerService {
  rpc LogEvent(LogEventRequest) returns (LogEventResponse) {}
}

message LogEventRequest {
  string level = 1;
  string message = 2;
  string service_name = 3;
  map<string, string> data = 4;
}

message LogEventResponse {
  bool success = 1;
  string message = 2;
}
