syntax = "proto3";

package pb;

option go_package = "/pb";

import "google/api/annotations.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }

  rpc GetUser(GetUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      get: "/v1/users/{id}"
    };
  }

  rpc GetAllUsers(EmptyRequest) returns (UsersResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      put: "/v1/users/{id}"
      body: "*"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (EmptyResponse) {
    option (google.api.http) = {
      delete: "/v1/users/{id}"
    };
  }
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse) {
    option (google.api.http) = {
      get: "/v1/users/email/{email}"
    };
  }

  rpc GetUserByKeycloakID(GetUserByEmailRequest) returns (UserResponse){
  }
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByKeycloakID {
  string keycloakID = 1;
}

message CreateUserRequest {
  int64 id = 1;
  string keycloakID = 2;
  string name = 3;
  string surname = 4;
  string email = 5;
  string role = 6;
}

message GetUserRequest {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string surname = 3;
  string role = 4;
  string email = 5;
}

message DeleteUserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string keycloakID = 2;
  string name = 3;
  string surname = 4;
  string email = 5;
  string role = 6;
  string created_at = 7;
  string updated_at = 8;
  int32 version = 9;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

message EmptyRequest {}

message EmptyResponse {}
